--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   margin: 0;
   padding: 0;
   font-family: "PT Sans",Arial, sans-serif;
@@ -7,56 +7,47 @@ body{
   font-weight: 700;
   color: black;
   text-transform: uppercase;
-
-  max-width: 1200px;
   background-color: white;
   text-align: center;
 }
-nav{
+
+nav {
   background-color: white;
 }
-.nav-left{
-  float: left;
-  padding-left: 110px;
 
-}
-.nav-right{
-  float: right;
-  padding-right: 140px;
-}
-
-nav::after{
-  clear: both;
-}
-a{
+a {
   color: black;
   text-decoration: none;
 }
-ul{
+
+ul {
   list-style: none;
 }
-main{
+
+main {
   background-image: url("../img/background-main.jpg");
   background-position:top center;
   background-repeat: no-repeat;
   background-size: 1200px 377px;
 }
-.intro{
+
+.intro {
   background-image:url("../img/intro-mask.svg");
   background-position: bottom ;
   background-repeat:no-repeat ;
   padding-bottom: 20px;
 }
-.heading{
-  display: inline-block;
+
+.heading {
   font-size: 14px;
   max-width: 500px;
-  text-align: center;
   font-weight: 400;
 }
-h1{
+
+h1 {
   font-size: 21px;
 }
+
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -64,15 +55,12 @@ h1{
   height: 1px;
   margin: -1px;
 }
-ul{
-  max-width: 1200px;
-}
-h3{
+
+h3 {
   font-size: 21px;
 }
 
-.float-left{
-  float: left;
+.float-left {
   background-color: #81b3d2;
   color:white;
   height: 200px;
@@ -81,40 +69,40 @@ h3{
 
 }
 
-.img-right{
+.img-right {
   width: 770px;
   height: 280px;
   margin-right: 40px;
 }
-.img-right::after{
-  clear: both;
-}
-.nested-list{
-  display: inline-block;
+.nested-list-1 {
+  background-image: url("../img/icon-1.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
   width: 290px;
   padding-top: 80px;
   margin-top: 60px;
-
 }
-.nested-list{
+
+.nested-list-2 {
   background-image: url("../img/icon-2.svg");
   background-repeat: no-repeat;
   background-position: top center;
   margin-right: 80px;
+  width: 290px;
+  padding-top: 80px;
+  margin-top: 60px;
 }
-.nested-list:first-child{
-  background-image: url("../img/icon-1.svg");
-  background-repeat: no-repeat;
-  background-position: top center;
-}
-.nested-list:last-child{
+
+.nested-list-3 {
   background-image: url("../img/icon-3.svg");
   background-repeat: no-repeat;
   background-position: top center;
+  width: 290px;
+  padding-top: 80px;
+  margin-top: 60px;
 }
 
 .float-right{
-  float: right;
   background-color: #81b3d2;
   color:white;
   height: 200px;
@@ -123,67 +111,87 @@ h3{
   margin-right: 40px;
 }
 .img-left{
-  float: left;
   width: 770px;
   height: 280px;
 }
-.img-left::after{
-  clear: both;
-}
-.trio{
-  display: inline-block;
+
+.trio-2 {
   width: 260px;
   margin-top: 40px;
   margin-right: 80px;
 }
-.trio:last-child{
+.trio-3 {
   width: 255px;
   margin-right: 0;
 }
-.trio:first-child{
-  margin-left: -120px;
+.trio-1 {
+  width: 255px;
+  margin-left: 0px;
 }
-section p{
+section p {
   font-weight: 400;
 }
-.regular{
+.regular {
   font-weight: 400;
 }
-button{
+button {
   background-color: #766357;
   color: white;
   padding: 20px 60px;
   font-weight: 700;
   font-size: 21px;
 }
-button:hover{
-  background-color: #604e43;
+
+.user {
+  display: none;
 }
-button:active{
-  background-color: #503e33;
-  color: #928a85;
-}
-.map{
+.map {
   width: 1200px;
   height: 500px;
 }
 
-.telefon{
+.telefone {
+  width: 150px;
   text-align: left;
 }
-.twiter{
-  background-image: url("../img/twitter.svg");
-}
-.facebook{
-  background-image: url("../img/fb-icon.svg");
 
+
+.social-link-1 {
+  background-image: url("../img/twitter.svg") ;
 }
-.youtube{
+
+.social-link-2 {/*почему неотображаются не знаю*/
+  background-image: url("../img/fb-icon.svg");
+  background-color: #81b3d2;
+}
+
+.social-lin-3 {
   background-image: url("../img/youtube.svg");
 }
-.social-link li{
-  color: #81b3d2;
-}
-.on-academy a{
+
+.on-academy {/*почему сьехало не знаю*/
+  font-weight: 400;
+  text-align: right;
   background-image: url("../img/logo-htmlacademy.svg");
+  background-position: right center;
+  background-repeat: no-repeat;
+}
+
+.tipe-cost {
+  font-weight: 400;
+}
+.detail {
+  background-color: #81b3d2;
+  color:white;
+  padding:5px 15px;
+}
+
+.order {
+  background-color: #766357;
+  color:white;
+  padding:5px 15px;
+}
+
+.raiting {
+font-weight: 400;
 }
