--- a/css/style.css
+++ b/css/style.css
@@ -10,34 +10,35 @@ body {
   background-color: #ffffff;
   text-align: center;
 }
+
 .page-conteiner {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.main-navigation {
+.main-navigation-conteiner {
   position: relative;
   width: 1200px;
 }
 
-.site-navigation{
+.site-navigation {
   display: flex;
   justify-content: space-evenly;/*Так как по бокам на макете тоже есть место*/
   align-items: center;
   padding: 0;
 }
 
-.right{
+.right {
   text-align: right;
 }
 
-.nav-list{
+.nav-list {
   width: 300px;
   margin: 10px;
 }
 
-.main-header-logo{
+.main-header-logo {
   position: absolute;
   top:0px;
   left: 50%;
@@ -49,7 +50,8 @@ body {
   color: #000000;
   text-decoration: none;
 }
-.nav-list .link{
+
+.nav-list .link {
   padding: 20px;
 }
 
@@ -75,7 +77,7 @@ body {
   height: 60px;
 }
 
-.heading{
+.heading {
   display: inline-block;
   font-size: 14px;
   max-width: 500px;
@@ -93,15 +95,12 @@ body {
   height: 1px;
   margin: -1px;
 }
-.content{
-  width: 100%;
-}
-.reason{
+
+.reason {
   display: flex;
   justify-content: space-evenly;
-
-
 }
+
 .reason-title {
   font-size: 21px;
 }
@@ -123,6 +122,7 @@ body {
   padding-top: 30px;
   width: 290px;
 }
+
 .home::before {
   content: "";
   display: block;
@@ -168,31 +168,36 @@ body {
   font-weight: 700;
   font-size: 21px;
 }
-.pop-up-form{
+
+.pop-up-form {
   position: relative;
 }
-.search-form{
+
+.search-form {
   position: absolute;
-  top: 70px;
+  top: 65px;
   left:50%;
   transform: translateX(-50%);
-  width: 500px;
+  width: 480px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   background-color: #ffffff;
   padding:30px;
 }
-.search-date{
+
+.search-date {
   display: flex;
   justify-content: space-between;
   width: 480px;
 }
-.search-sum{
+
+.search-sum {
   width: 250px;
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
 .find-button{
   border: none;
   width: 450px;
@@ -203,11 +208,13 @@ body {
   background-color:#81b3d2;
   padding: 10px 60px;
 }
+
 .map {
   width: 1200px;
   height: 500px;
 }
-.footer{
+
+.footer {
   display: flex;
   justify-content: space-around;
   margin-top: 20px;
@@ -217,12 +224,13 @@ body {
   width: 150px;
 }
 
-.social-link{
+.social-link {
   display: flex;
   width: 200px;
   height: 70px;
 }
-.social-button{/*Т.к у иконок разное сотояние (покой,наведение,нажатие)*/
+
+.social-button {/*Т.к у иконок разное сотояние (покой,наведение,нажатие)*/
   display: flex;
   height: 40px;
   width: 40px;
@@ -231,11 +239,13 @@ body {
   background-color: #81b3d2;
   margin: 3px;
 }
-.academy{
+
+.academy {
   display: flex;
   align-items: center;
   margin: 0;
 }
+
 .academy-link {
   display: block;
   margin-left: 5px;
@@ -256,7 +266,7 @@ body {
 }
 
 .filter-width {
-  width:1200px;
+  width: 1200px;
 }
 
 .filter {
@@ -268,26 +278,41 @@ body {
   background-position: center;
   color: #ffffff;
 }
-.resting-kind{
-  width: 1200px;
+
+.resting-kind {
+  width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.rest {
-  width: 1200px;
-  height: 300px;
+.resting-place {
+  width: 1100px;
+  height: 120px;
   display: flex;
   justify-content: space-between;
+  margin: 0;
 }
+
 .art-section {
 display:flex;
-
-
 }
-.images{
-  margin: 25px;
+
+.images {
+  margin-top: 3px;
+margin-right: 20px;
 }
+
+.article-heading {
+  margin: 0;
+}
+
+.button-item .regular {
+  text-align: left;/*так как наследовалось из body center*/
+}
+
 .raiting {
-  justify-items: flex-end;
+  justify-items: end;
+  align-items:end;
 }
 
 .filter-range {
@@ -309,9 +334,7 @@ display:flex;
 
   height: 36px;
   margin-bottom: 20px;
-
   font-size: 0;
-
   border: 2px solid #ffffff;
   border-radius: 2px;
 }
@@ -423,13 +446,54 @@ display:flex;
   background: #ffffff;
 }
 
-.filter-input{
+.filter-input {
   border: none;
   text-align: start;
 }
-.user-filter{
+
+.user-filter {
   display: flex;
 }
-.sort{
+
+.sort {
   display: flex;
+}
+
+.ul-sort {
+  display: flex;
+}
+
+.button-conteiner{
+  display: flex;
+  width: 180px;
+  justify-content: space-between;
+}
+
+.button-item {
+  display: block;
+  flex-wrap: wrap;
+  width: 70px;
+}
+
+.check-input {
+  position: absolute;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.check-box {
+  position: absolute;
+  width: 23px;
+  height: 23px;
+  background-image: url("../img/checkbox-off.svg");
+}
+
+.check {
+  padding-left: 30px;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.check-input:checked + .check-box {/*не переключается*/
+  background-image: url("../img/checkbox-on.svg");
 }
