--- a/css/style.css
+++ b/css/style.css
@@ -4,43 +4,44 @@ body {
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 21px;
-  font-weight: 700;
+  font-weight: 400;
   color: #000000;
   text-transform: uppercase;
   background-color: #ffffff;
   text-align: center;
 }
 
-.page-conteiner {
+.page-container {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.main-navigation-conteiner {
+.navigation-container {
   position: relative;
-  width: 1200px;
 }
 
 .site-navigation {
   display: flex;
-  justify-content: space-evenly;/*Так как по бокам на макете тоже есть место*/
+  justify-content: space-around;
+  height: 40px;
   align-items: center;
   padding: 0;
 }
 
-.right {
+.link-right {/*ничего лучше не придумывается*/
   text-align: right;
+
 }
 
-.nav-list {
+.nav-item {
   width: 300px;
-  margin: 10px;
+
 }
 
 .main-header-logo {
   position: absolute;
-  top:0px;
+  top: 0px;
   left: 50%;
   transform: translateX(-50%);
   display: block;
@@ -49,10 +50,7 @@ body {
 .link {
   color: #000000;
   text-decoration: none;
-}
-
-.nav-list .link {
-  padding: 20px;
+  font-weight: 700;
 }
 
 .without-bullets {
@@ -67,18 +65,22 @@ body {
   background-size: 100%;
   background-position: center 25%;
   padding-top: 60px;
+  padding-bottom: 31px;
 }
 
-.intro::after {/*Полоса сохранилась*/
+.intro::after {
   display: block;
+  position: absolute;
+  bottom: 48%;
   content: "";
   background-image: url("../img/intro-mask.svg");
-  background-position: bottom;
   height: 60px;
+  width: 1200px;
 }
 
 .heading {
-  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 14px;
   max-width: 500px;
   font-weight: 400;
@@ -98,7 +100,7 @@ body {
 
 .reason {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .reason-title {
@@ -123,40 +125,29 @@ body {
   width: 290px;
 }
 
-.home::before {
+.home::before,.food::before,.souvenir::before {
   content: "";
   display: block;
-  background-image: url("../img/icon-1.svg");
   background-repeat: no-repeat;
   background-position: top center;
   height: 90px;
+}
+
+.home::before {
+  background-image: url("../img/icon-1.svg");
 }
 
 .food::before {
-  content: "";
-  display: block;
   background-image: url("../img/icon-3.svg");
-  background-repeat: no-repeat;
-  background-position: top center;
-  height: 90px;
 }
 
-.suvenir::before {
-  content: "";
-  display: block;
+.souvenir::before {
   background-image: url("../img/icon-2.svg");
-  background-repeat: no-repeat;
-  background-position: top center;
-  height: 90px;
 }
 
 .other-reasons {
   padding-top: 30px;
   width: 255px;
-}
-
-.regular {
-  font-weight: 400;
 }
 
 .search {
@@ -171,34 +162,35 @@ body {
 
 .pop-up-form {
   position: relative;
+  font-weight: 700;
 }
 
 .search-form {
   position: absolute;
   top: 65px;
-  left:50%;
+  left: 50%;
   transform: translateX(-50%);
   width: 480px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
   background-color: #ffffff;
-  padding:30px;
+  padding: 30px;
 }
 
 .search-date {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 480px;
 }
 
 .search-sum {
-  width: 250px;
+  width: 240px;
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
-.find-button{
+.find-button {
   border: none;
   width: 450px;
   font-weight: 700;
@@ -222,22 +214,38 @@ body {
 
 .telephone {
   width: 150px;
+  font-weight: 700;
 }
 
 .social-link {
   display: flex;
-  width: 200px;
-  height: 70px;
+  flex-wrap: wrap;
+
 }
 
-.social-button {/*Т.к у иконок разное сотояние (покой,наведение,нажатие)*/
-  display: flex;
+.social-icon {
+  display: block;
   height: 40px;
   width: 40px;
   justify-content: center;
   align-items: center;
   background-color: #81b3d2;
-  margin: 3px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 6px;
+}
+
+.twitter {
+  background-image: url("../img/twitter.svg");
+  margin: 0;
+}
+
+.facebook {
+  background-image: url("../img/fb-icon.svg");
+}
+
+.youtube {
+  background-image: url("../img/youtube.svg");
 }
 
 .academy {
@@ -249,7 +257,7 @@ body {
 .academy-link {
   display: block;
   margin-left: 5px;
-  height: 30px;
+
   width: 80px;
 }
 
@@ -265,9 +273,7 @@ body {
   padding: 5px 15px;
 }
 
-.filter-width {
-  width: 1200px;
-}
+
 
 .filter {
   display: flex;
@@ -294,25 +300,21 @@ body {
 }
 
 .art-section {
-display:flex;
+  display: flex;
 }
 
 .images {
   margin-top: 3px;
-margin-right: 20px;
+  margin-right: 20px;
 }
 
 .article-heading {
+  text-align: left;
   margin: 0;
 }
 
-.button-item .regular {
+.before-button {
   text-align: left;/*так как наследовалось из body center*/
-}
-
-.raiting {
-  justify-items: end;
-  align-items:end;
 }
 
 .filter-range {
@@ -448,7 +450,7 @@ margin-right: 20px;
 
 .filter-input {
   border: none;
-  text-align: start;
+  text-align: left;
 }
 
 .user-filter {
@@ -459,20 +461,14 @@ margin-right: 20px;
   display: flex;
 }
 
-.ul-sort {
+.typical-sorting {
   display: flex;
 }
 
-.button-conteiner{
+.button-container{
   display: flex;
-  width: 180px;
+  width: 250px;
   justify-content: space-between;
-}
-
-.button-item {
-  display: block;
-  flex-wrap: wrap;
-  width: 70px;
 }
 
 .check-input {
@@ -480,12 +476,12 @@ margin-right: 20px;
   -webkit-appearance: none;
   appearance: none;
 }
-
-.check-box {
+.check::before {
+  display: block;
   position: absolute;
-  width: 23px;
-  height: 23px;
+  width: 70px;
   background-image: url("../img/checkbox-off.svg");
+  background-size: 23px;
 }
 
 .check {
