--- a/css/style.css
+++ b/css/style.css
@@ -274,15 +274,17 @@ body {
 
 
 .filter {
-  display: flex;
-
   background-image: url("../img/background-main.jpg");
   background-size: 1200px;
   background-repeat: no-repeat;
   background-position: center;
   color: #ffffff;
 }
-
+.user-filter{
+  display: flex;
+  justify-content: space-between;
+  padding:20px  40px;
+}
 .resting-kind {
   width: 1100px;
   margin-left: auto;
@@ -449,13 +451,11 @@ body {
 .filter-input {
   border: none;
   text-align: left;
+
+}
+.filter-input legend{
   font-weight: 700;
 }
-
-.user-filter {
-  display: flex;
-}
-
 .sort {
   display: flex;
 }
@@ -470,7 +470,7 @@ body {
   justify-content: space-between;
 }
 
-/*.check-input {
+.check-input {
   position: absolute;
   -webkit-appearance: none;
   appearance: none;
@@ -478,26 +478,66 @@ body {
 .check-input::before {
   display: block;
   content: "";
-  width: 17px;
-  height: 17px;
+  width: 27px;
+  height: 23px;
   background-image: url("../img/checkbox-off.svg");
   background-repeat: no-repeat;
-  background-size: 17px;
+
 }
 
 .check {
-  padding-left: 20px;
+  padding-left: 30px;
   display: block;
   margin-bottom: 5px;
 }
-*/
-/*.check-input::before:checked + .check-box {
+
+.check-input:checked::before {
   display: block;
   content: "";
-  width: 20px;
-  height: 20px;
+  width: 27px;
+  height: 23px;
   background-image: url("../img/checkbox-on.svg");
   background-repeat: no-repeat;
-  background-size: 17px;
 }
-не переключается*/
+
+.check-box {
+  display: block;
+}
+.check-container {
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+}
+.sort-button {
+  display: block;
+  width: 11px;
+  height: 10px;
+
+  
+}
+.up-button{
+  background-image: url("../img/icon-up-dir.svg");
+  fill: #81b3d2;
+}
+.down-button {
+  background-image: url("../img/icon-down-dir.svg");
+}
+.star{
+  display: block;
+  width: 18px; 
+  height: 17px;
+  background-image: url("../img/star.svg");
+  margin-left: auto;
+}
+.four{
+  background-repeat: repeat-x;
+  width: 72px;
+}
+.three{
+  background-repeat: repeat-x;
+  width: 54px;
+}
+.two{
+  background-repeat: repeat-x;
+  width: 36px;
+}
