--- a/css/style.css
+++ b/css/style.css
@@ -19,27 +19,41 @@ body {
 
 .navigation-container {
   position: relative;
-}
 
-.site-navigation {
-  display: flex;
-  justify-content: space-around;
-  height: 40px;
-  align-items: center;
-  padding: 0;
 }
-
-.nav-item {
-  width: 300px;
-}
-
 .logo {
   position: absolute;
-  top: 0px;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
   display: block;
   z-index: 1;
+}
+
+.site-navigation {
+  display: flex;
+  height: 55px;
+  align-items: center;
+  padding: 0;
+  
+}
+
+.nav-item {
+  text-align: right;
+}
+
+.nav-item:first-child {
+  margin-left: 6%;
+  text-align: left;
+}
+ 
+.nav-item:nth-child(2) {
+  margin-left: 12.4%;
+  text-align: left;
+}
+.nav-item:nth-child(3) {
+  margin-left: 32.3%;
+  margin-right: 13.7%;
 }
 
 
@@ -60,9 +74,9 @@ body {
   background-image: url("../img/background-main.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
-  background-position: center 25%;
-  padding-top: 60px;
-  padding-bottom: 30px;
+  background-position: center 27.5%;
+  padding-top: 78px;
+  padding-bottom: 72px;
 }
 
 .intro::after {
@@ -82,8 +96,12 @@ body {
   font-size: 14px;
   max-width: 500px;
   font-weight: 400;
+  padding: 4% 0 1.7%;
+  line-height: 24px;
 }
-
+.heading-reason{
+  padding: 17px 0;
+}
 .main-title {
   font-size: 21px;
 }
@@ -101,25 +119,41 @@ body {
   justify-content: space-around;
 }
 
+.numer-reason{
+  display: flex;
+  justify-content: space-around;
+  background-color: #d3d3d3;
+
+}
 .reason-title {
   font-size: 21px;
+  padding: 0 70px;
 }
+
 
 .marked {
   background-color: #81b3d2;
   color: #ffffff;
-  height: 200px;
-  width: 320px;
-  padding: 40px;
+  height: 205px;
+  width: 350px;
+  padding: 25px 45px;
+
+}
+
+.small-scale{
+  margin: 0;
+  padding: 10px;
 }
 
 .img-reason {
   width: 800px;
-  height: 280px;
+  height: 255px;
+  object-fit: cover;
 }
 
 .nested-list {
-  padding-top: 30px;
+  padding-top: 40px;
+  padding-bottom: 70px;
   width: 290px;
 }
 
@@ -129,6 +163,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   height: 90px;
+  padding-bottom: 10px;
 }
 
 .home::before {
@@ -145,17 +180,30 @@ body {
 
 .other-reasons {
   padding-top: 30px;
+  padding-bottom: 50px;
   width: 255px;
+}
+.before-search{
+  font-size: 30px;
+  font-weight: 700;
+  padding: 30px 0 42px;
+}
+.before-search p:last-child{
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+  padding: 6px 0;
 }
 
 .search {
   border: none;
-  width: 540px;
+  width: 568px;
   background-color: #766357;
   color: #ffffff;
-  padding: 20px 60px;
+  padding: 32px 70px;
   font-weight: 700;
   font-size: 21px;
+  text-transform: uppercase;
 }
 
 .pop-up-form {
@@ -165,66 +213,79 @@ body {
 
 .search-form {
   position: absolute;
-  top: 65px;
+  top: 88px;
   left: 50%;
   transform: translateX(-50%);
-  width: 480px;
+  width: 490px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+
   background-color: #ffffff;
-  padding: 30px;
+  padding: 37px 40px;
+}
+
+.date-button{
+  margin-left: auto;
+  margin-right: 20px;
 }
 
 .search-date {
   display: flex;
-  justify-content: space-around;
   width: 480px;
+  padding-left: 18px;
+  padding-top: 10px;
 }
 
 .search-sum {
-  width: 240px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  width: 180px;
+  padding-top: 8px;
+  margin-bottom: 62px;
+  margin-right: 65px;
 }
 
 .find-button {
   border: none;
-  width: 450px;
+  width: 458px;
   font-weight: 700;
   font-size: 21px;
   text-transform: uppercase;
   color: #ffffff;
   background-color: #81b3d2;
-  padding: 10px 60px;
+  padding: 17px 50px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 .map {
   width: 1200px;
-  height: 500px;
+  height: 470px;
 }
 
 .footer {
   display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
 }
 
 .telephone {
-  width: 150px;
+  width: 220px;
   font-weight: 700;
+  font-size: 21px;
+  text-align: left;
+  padding-top: 10px;
+  margin-left: 10.3%;
 }
 
 .social-link {
   display: flex;
   flex-wrap: wrap;
-
+  margin-left: 15.1%;
+  margin-right: 19.1%;
+  margin-top: 32px;
 }
 
 .social-icon {
   display: block;
-  height: 40px;
-  width: 40px;
+  height: 46px;
+  width: 46px;
   justify-content: center;
   align-items: center;
   background-color: #81b3d2;
@@ -251,24 +312,26 @@ body {
   align-items: center;
   margin: 0;
 }
-
+.foot-text{
+  padding-top: 16px;
+}
 .academy-link {
   display: block;
-  margin-left: 5px;
-
-  width: 80px;
+  margin-left: 6px;
+  width: 115px;
+  padding-top: 25px;
 }
 
 .detail {
   background-color: #81b3d2;
   color: #ffffff;
-  padding: 5px 15px;
+  padding: 5px 17px;
 }
 
 .order {
   background-color: #766357;
   color: #ffffff;
-  padding: 5px 15px;
+  padding: 5px 17px;
 }
 
 .filter {
@@ -282,7 +345,8 @@ body {
 .user-filter {
   display: flex;
   justify-content: space-between;
-  padding: 20px  40px;
+  padding: 26px  57px 0;
+  font-size: 16px;
 }
 
 .resting-place {
@@ -290,7 +354,7 @@ body {
   display: flex;
   justify-content: space-between;
   border-top: 1px solid #cacaca;
-  padding: 20px 50px;
+  padding: 28px 72px;
 }
 
 .resting-place:last-child {
@@ -302,8 +366,8 @@ body {
 }
 
 .images {
-  margin-top: 3px;
-  margin-right: 20px;
+  margin-top: 2px;
+  margin-right: 30px;
 }
 
 .article-heading {
@@ -312,7 +376,9 @@ body {
 }
 
 .before-button {
-  text-align: left;/*так как наследовалось из body center*/
+  text-align: left;
+  margin-top: 10px;
+  margin-bottom: 17px;
 }
 
 .filter-range {
@@ -323,7 +389,7 @@ body {
 
 .filter-range-title {
   margin-bottom: 9px;
-
+  text-align: left;
   font-weight: 600;
   font-size: 16px;
   line-height: 21px;
@@ -449,56 +515,63 @@ body {
 .filter-input {
   border: none;
   text-align: left;
+  margin-right: 93px;
 
 }
 
 .checkbox-title {
   font-weight: 700;
+  padding-bottom: 19px;
+
 }
 
 .typical-sorting {
   display: flex;
-  padding: 24px 0;
+  padding-top: 30px;
+  font-size: 12px;
 }
 
 .sort-find {
   font-size: 21px;
   font-weight: 700;
-  margin-right: 50px;
+  margin-right: 53px;
+  margin-top: 30px;
+  margin-bottom: 34px;
 }
 
 .sort-transfer {
-  padding: 10px 0;
+  padding-top: 20px;
   margin-right: 40px;
+  font-size: 12px;
 }
 
 .typical-sorting .link {
   color: #81b3d2;
   font-weight: 400;
-  margin-right: 30px;
+  margin-right: 33px;
 }
 
 .sort {
   display: flex;
-  padding: 0 50px;
+  padding: 0 70px;
 }
 
 .sort-button-container {
   display: flex;
-  padding: 30px 0;
+  padding-top: 37px;
   margin-left: auto;
 }
 
 .sort-button {
   display: block;
-  width: 11px;
+  width: 12px;
   height: 10px;
-  margin-left: 5px;/*Тут вроде мардж т.к. падинг начинает повторять изображение*/
+  margin-left: 13px;/*Тут вроде мардж т.к. падинг начинает повторять изображение*/
 }
 
 .button-container {
   display: flex;
-  width: 250px;
+  width: 259px;
   justify-content: space-between;
 }
 
@@ -522,9 +595,9 @@ body {
 }
 
 .check {
-  padding-left: 30px;
+  padding-left: 39px;
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 25px;
 }
 
 .check-input:checked::before {
